Fix filter menu overlap

--- a/frontend/src/styles/filters.scss
+++ b/frontend/src/styles/filters.scss
@@ -41,7 +41,7 @@
 /* ################################ FILTER MENU BODY ################################ */
 
 #filter-menu {
-    z-index: 10;
+    z-index: 9;
     width: 600px;
     right: -600px;
     display: flex;
